# christmas

./: .env.docker  .env.example  .env.production  .gitignore  01_DETAILED_PRD.md  02_USER_FLOW.md  03_UIUX_DESIGN_GUIDE.md  04_FUNCTIONAL_REQUIREMENTS.md  05_INFORMATION_ARCHITECTURE.md  06_TEST_SCENARIOS.md  AI_INVESTMENT_ADVISOR_DESIGN.md  CLAUDE.md  CLEANUP_PLAN.md  CURRENT_PROJECT_STATUS_BRIEFING.md  CURRENT_SCHEMA_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_ISSUE_ANALYSIS.md  DEPLOYMENT_README.md  DEPLOYMENT_REALITY_ANALYSIS.md  DEPLOYMENT_TRIGGER.md  DEPLOYMENT_VERIFICATION_REPORT.md  DESIGN_SYSTEM.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_ROADMAP.md  DOMAIN_DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.orchestrator  Dockerfile.rag  Dockerfile.rag-web  Dockerfile.test  Dockerfile.vercel  FIREBASE_SETUP_GUIDE.md  FUNDAMENTAL_ISSUE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_LOG.md  MIGRATION_PLAN.md  NETLIFY_FIX_REPORT.md  (+119 more)
.github/workflows/: beta_check.yml  blue-green-deploy.yml  cd.yml  ci.yml  deploy.yml  netlify-deploy.yml  vercel-deploy.yml
app/: __init__.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.simple  README.md  docker-compose.yml  env.txt  main.py  package-lock.json  package.json  requirements.txt  server.js  start.sh  test-server.js  websocket.js  websocket_simple.js
config/: api_keys.json  env.example
docker/: nginx.conf
docs/: 00. document_map.md  02_Dependency_Management_2025-05-30.md  03. christmas_userflow.md  04. Christmas_IA.md  04_Code_Quality_Guidelines_2025-05-30.md  05. Christmas_AI Model Options.md  05_Test_Strategy_2025-05-30.md  07. christmas_message-flow.md  09. christmas_project-structure.md  12. christmas_test-strategy.md  14. christmas_Security Guidelines.md  15. Performance Optimization Guide.md  16. Christmas_Team Collaboration Guide.md  18. christmas_wbs.md  19. christmas_RAG.md  19. test_qa_progress.md  20. Supabase 데이터베이스 연동 계획.md  20. christmas_Refactoring Governance.md  20. document_map.md  20. korean_securities_api.md  21. christmas_Reference Document Map.md  22. 프로젝트 구조도.md  22. 향후 기능 구현 로드맵.md  23. Christmas_프로젝트_완료_보고서.md  25. Christmas_프로젝트_공식_완료_선언서.md  25. 의존성 관리 문서.md  26. cicd_pipeline.md  28. 실제 적용 완료 보고서.md  29. 최종 실제 적용 단계별 진행 계획.md  30. Phase 2 고도화 개발 계획서.md  31. Phase 2 단계별 구현 가이드.md  33. 회원 등급 및 이벤트 시스템 설계.md  35. 클라우드 기반 무료 서비스 아키텍처 설계서.md  41. Supabase 프로젝트 설정 가이드.md  44. 프로젝트 구조도.md  46. 프로젝트 관리 및 서버 이전 가이드.md  47. 프로젝트 구조도.md  49. 보안 가이드라인.md  50. 테스트 전략 문서.md  51. 문서 맵 및 관리 가이드.md  (+80 more)
frontend/: .env.example  index.html  package.json  readme.md  tailwind.config.js  vite.config.ts
monitoring/: prometheus.yml
nginx/: nginx.conf
orchestrator/: orchestrator.py  requirements.txt
public/: debug.html  static-test.html
scripts/: ai-tables-fix-corrected.sql  ai-tables-fix-final.sql  backend-emergency-fix.ps1  backend-https-setup.sh  backend-monitor.sh  backup.py  backup_database.sh  beta_feedback_system_check.py  beta_generate_report.py  beta_issue_response.py  beta_issue_response_backup.py  beta_issue_response_fix.py  beta_issue_response_updated.py  beta_stabilization.py  blue-green-deploy.sh  check-actual-env.ps1  check-ai-tables-structure.sql  check-supabase-schema.js  check-users-table-safe.sql  check-users-table-structure.sql  contabo-deploy-step-by-step.sh  continuous-monitor.sh  create-missing-tables-en.sql  create-missing-tables.js  create-missing-tables.sql  create-supabase-tables-complete.js  create-supabase-tables-final.js  create-supabase-tables.js  create-supabase-tables.sql  create-tables-direct.js  create-tables-psql.js  create-tables-simple.js  create-test-users.js  deploy-backend-after-copy.ps1  deploy-backend-supabase.ps1  deploy-env-free.sh  deploy_simple.ps1  deploy_to_netlify.ps1  deploy_to_vercel.sh  docker-recovery-guide.ps1  (+77 more)
sql/: 01_create_stocks_table.sql
src/: App.css  App.tsx  AppMinimal.tsx  AppRouter.tsx  AppSimple.tsx  SimpleRouter.tsx  index.css  main.tsx
static/: index.html
supabase/: schema.sql  schema_update.sql  schema_update_ai.sql
tests/: conftest.py
web-dashboard/: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  env.production  env.production.secure  env.txt  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  vite.config.js
(+512 files in other folders)
