[tool.poetry]
name = "christmas"
version = "0.1.0"
description = "Docker 컨테이너 기반의 초단타(스켈핑) 자동 매매 플랫폼"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
redis = "^5.0.1"
timescaledb-python = "^0.5.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-telegram-bot = "^22.0"
httpx = "^0.25.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
ta-lib = "^0.4.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*" 